[gd_scene load_steps=8 format=3 uid="uid://jvf1fo60ethj"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_hlyya"]
[ext_resource type="Texture2D" uid="uid://dbn8bvtkf5cjf" path="res://sprites/characters/player/player.png" id="1_nqw6s"]
[ext_resource type="Texture2D" uid="uid://f0hjkree20t4" path="res://sprites/characters/player/walk/player_l.png" id="2_6yiuq"]
[ext_resource type="Texture2D" uid="uid://ca5vf7ctvqvyq" path="res://sprites/characters/player/walk/player_r.png" id="3_lqv6e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sorns"]
size = Vector2(12, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_3pcfg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_nqw6s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6yiuq")
}, {
"duration": 1.0,
"texture": ExtResource("1_nqw6s")
}, {
"duration": 1.0,
"texture": ExtResource("3_lqv6e")
}, {
"duration": 1.0,
"texture": ExtResource("1_nqw6s")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_mnlvr"]

[node name="Player" type="CharacterBody2D"]
editor_description = "Speed that the player moves."
script = ExtResource("1_hlyya")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_sorns")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3pcfg")
animation = &"walk"

[node name="Speech" type="Label" parent="."]
clip_contents = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -40.0
offset_right = 224.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0.25098, 0.0588235, 0.0588235, 1)
theme_override_colors/font_shadow_color = Color(0.752941, 0.945098, 0.945098, 1)
text = "
"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3
text_overrun_behavior = 4

[node name="Timer" type="Timer" parent="."]

[node name="Name" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 8.0
offset_right = 224.0
offset_bottom = 32.0
grow_horizontal = 2
scale = Vector2(0.25, 0.25)
theme = SubResource("Theme_mnlvr")
theme_override_colors/font_color = Color(0.25098, 0.0588235, 0.0588235, 1)
theme_override_colors/font_shadow_color = Color(0.752941, 0.945098, 0.945098, 1)
text = "
"
horizontal_alignment = 1

[node name="InworldPlayer" type="InworldPlayer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="conversing_start" from="InworldPlayer" to="." method="_on_inworld_player_conversing_start"]
[connection signal="conversing_stop" from="InworldPlayer" to="." method="_on_inworld_player_conversing_stop"]
